--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 					<section id="banner" class="major">
 						<div class="inner">
 							<header class="major">
-								<h1>Nates Poopy Website</h1>
+								<h1>Nates Happy Website</h1>
 							</header>
 							<div class="content">
 								<p>A responsive site template designed by HTML5 UP<br />
